[package]
name = "uppercut-mio-server"
version = "0.1.0"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
uppercut = "0.1.0"
parser-combinators = { git = "https://github.com/sergey-melnychuk/rust-parser-combinators", tag = "0.1.4" }
log = "0.4.8"
env_logger = "0.7.1"
base64 = "0.12.0"
sha-1 = "0.8.2"

[dependencies.mio]
version = "0.7.0"
features = ["os-poll", "tcp"]
