[package]
name = "uppercut-mio-server"
version = "0.1.0"
authors = ["sergey-melnychuk"]
edition = "2018"

[dependencies]
uppercut = "0.2.0"
parsed = "0.1.5"
log = "0.4.8"
env_logger = "0.7.1"
base64 = "0.12.0"
sha-1 = "0.8.2"
num_cpus = "1.13.0"

[dependencies.mio]
version = "0.7.0"
features = ["os-poll", "tcp"]
